feat: add auction management features including listing, details, and form for creating/editing auctions
- Implemented auction listing page with CRUD operations
- Added auction details page with bidding functionality
- Created auction form for adding and editing auctions
- Introduced user management for handling user roles and permissions
- Updated routing configuration to accommodate new auction and user routes
- Enhanced header component with dropdown for admin settings
- Integrated lance (bid) service for managing bids on auctions
- Refactored user store to persist user data in local storage
- Added TypeScript models for auction and bid entities

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,15 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@config/*": ["./src/config/*"],
+      "@layouts/*": ["./src/layouts/*"],
+      "@lib/*": ["./src/lib/*"],
+      "@models/*": ["./src/models/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@services/*": ["./src/services/*"],
+      "@stores/*": ["./src/stores/*"]
     }
   },
   "include": ["src"]
